Refactor to use bower for retrieving initial dependencies and moved the grunt file to the project root

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
 	"main": "backbone-injector.js",
 	"dependencies": {
 		"backbone":"latest",
-		"injector.js": "latest"
+		"injector.js": "latest",
+		"jquery": "latest",
+		"underscore": "latest"
 	}
 }
