--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,12 +11,11 @@
 #   - dist/**/*.js
 #
 src_files:
-    - public/js/vendors/jquery-2.0.3.js
-    - public/js/vendors/underscore.js
-    - public/js/vendors/backbone.js
-    - public/js/vendors/injector-js.js
-    - public/js/vendors/**/*.js
-    - public/js/backbone-injector/**/*.js
+    - js/vendors/jquery/jquery.js
+    - js/vendors/underscore/underscore.js
+    - js/vendors/backbone/backbone.js
+    - js/vendors/injector.js/injector-js.js
+    - js/backbone-injector/**/*.js
 
 # stylesheets
 #
@@ -65,7 +64,7 @@ spec_files:
 #
 # src_dir: public
 #
-src_dir:
+src_dir: 'public'
 
 # spec_dir
 #
@@ -76,7 +75,7 @@ src_dir:
 #
 # spec_dir: spec/javascripts
 #
-spec_dir:
+spec_dir: 'spec'
 
 # spec_helper
 #
