Travis-ci install bower - typo

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 before_install:
   - "npm install"
   - "npm install -g bower"
-  - "npm bower install"
+  - "bower install"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 script: bundle exec rake
