--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backbone-injector",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": {
     "name": "Paul Tondeur",
     "email": "paul@paultondeur.nl",
@@ -15,7 +15,8 @@
     "grunt": "~0.4.0",
     "grunt-contrib-uglify": "~0.1.2",
     "grunt-contrib-watch": "~0.3.1",
-    "grunt-contrib-copy": "~0.4.0"
+    "grunt-contrib-copy": "~0.4.0",
+    "grunt-bump": "~0.0.11"
   },
   "engines": {
     "node": "0.8.x"
