--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-	"name": "backbone-injector",
-	"version": "0.1.3",
-	"author": {
-		"name": "Paul Tondeur",
-		"email": "paul@paultondeur.nl",
-		"url": "http://paultondeur.com"
-	},
-	"description": "Small Backbone extension for injector.js dependency injection",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/PaulTondeur/backbone-injector"
-	},
-	"dependencies": {
-		"grunt": "~0.4.0",
-		"grunt-contrib-uglify": "~0.1.2",
-		"grunt-contrib-watch": "~0.3.1",
-		"grunt-contrib-copy": "~0.4.0",
-		"grunt-bump": "~0.0.11"
-	},
-	"engines": {
-		"node": "0.8.x"
-	},
-	"devDependencies": {
-		"grunt-contrib-concat": "~0.3.0"
-	}
+  "name": "backbone-injector",
+  "version": "0.1.3",
+  "author": {
+    "name": "Paul Tondeur",
+    "email": "paul@paultondeur.nl",
+    "url": "http://paultondeur.com"
+  },
+  "main": "backbone-injector.js",
+  "description": "Small Backbone extension for injector.js dependency injection",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PaulTondeur/backbone-injector"
+  },
+  "dependencies": {
+    "backbone": ">=1.2.0",
+    "grunt": "~0.4.0",
+    "grunt-bump": "~0.0.11",
+    "grunt-contrib-copy": "~0.4.0",
+    "grunt-contrib-uglify": "~0.1.2",
+    "grunt-contrib-watch": "~0.3.1",
+    "underscore": "^1.8.3"
+  },
+  "engines": {
+    "node": "0.8.x"
+  },
+  "devDependencies": {
+    "grunt-contrib-concat": "~0.3.0"
+  }
 }
